--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://velmurugan-dev.github.io/electoraai",
+  "homepage": "https://velmurugan-dev.github.io/neutralizer",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,11 +13,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    "recharts": "^2.8.0",
-    "lucide-react": "^0.263.1"
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -27,7 +27,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5",
-    "gh-pages": "^6.0.0"
+    "gh-pages": "^6.0.0",
+    "vite": "^4.4.5"
   }
 }
